src/test/ui/hrtb/issue-30786.nll.stderr
error: higher-ranked subtype error
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/issue-30786.rs:112:18
   |
LL |     let filter = map.filter(|x: &_| true);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:114:17
=======
  --> $DIR/issue-30786.rs:113:18
   |
LL |     let filter = map.filter(|x: &_| true);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:115:17
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     let count = filter.count(); // Assert that we still have a valid stream.
   |                 ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

